address component done of html-form

--- a/task-4-html-form/index.html
+++ b/task-4-html-form/index.html
@@ -252,11 +252,18 @@
 
 
 
-      
+      <fieldset style="margin-top: 10px;">
+        <legend>Single Address</legend>
+        <label for="address">
+          Are Mailing Address and Residential Address same? 
+          <input type="checkbox" name="address" id="address">
+          <label for="address">Yes</label>
+        </label>
+      </fieldset>
 
 
 
-      <fieldset>
+      <fieldset style="margin-top: 10px;">
         <legend>Mailing Address</legend>
 
         <div style="display: flex;margin-top: 10px;">
