--- a/task-4-html-form/index.html
+++ b/task-4-html-form/index.html
@@ -14,13 +14,13 @@
     <fieldset class="box-class">
       <legend>Primary Details</legend>
       <div>
-        <label style="position: relative; left: 250px" for="valid-id"
+        <label style="position: relative; left: 270px" for="valid-id"
           >Valid Till</label
         ><br />
         <label for="mnumber">Medicare No</label>
         <span style="margin-left: 20px">
           <input type="text" id="mnumber" name="mnumber" size="8" />
-          /
+          <span style="font-weight: 900;font-size: large;">/</span>
           <input type="text" id="mnumber" name="mnumber" size="2" />
 
           <input type="month" id="valid-id" name="valid-id" value="2020-10" />
@@ -68,7 +68,7 @@
         <br />
 
         <label for="dob">DOB</label>
-        <span style="position: relative;margin-left: 66px;border: 1px solid black;padding: 2px;">
+        <span style="position: relative;margin-left: 72px;border: 1px solid black;padding: 2px;">
           <input type="checkbox" name="dob" />
           <label for="dob">27/07/2018</label>
 
