--- a/task-7-bootstrap/index.html
+++ b/task-7-bootstrap/index.html
@@ -111,26 +111,13 @@
               </ul>
 
               <hr />
-              <!-- <div class="dropdown pb-4">
-                        <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
-                            <span class="d-none d-sm-inline mx-1">loser</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-                            <li><a class="dropdown-item" href="#">New project...</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Sign out</a></li>
-                        </ul>
-                    </div> -->
+              
             </div>
           </div>
 
           <div class="col">
-            <!-- actual content area  -->
+            <!-- navbar   -->
+
 
             <div>
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -146,7 +133,7 @@
                   >
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <a class="navbar-brand font-weight-bold" href="#"
+                  <a class="navbar-brand fw-bold fs-4" href="#"
                     >Portfolio</a
                   >
                   <div
@@ -221,25 +208,23 @@
                       <span class=""></span>
                       <span class="mx-2 border-3 border-end"></span>
 
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="19"
-                        height="19"
-                        fill="currentColor"
-                        class="bi bi-person-circle"
-                        viewBox="0 0 16 16"
-                      >
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                        <path
-                          fill-rule="evenodd"
-                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"
-                        />
-                      </svg>
+                      <img src="https://github.com/mdo.png" alt="hugenerd" width="30" height="30" class="rounded-circle">
                     </div>
                   </div>
                 </div>
               </nav>
             </div>
+            
+            <!-- tiles area -->
+
+            <div class="bg-white h-100 p-4 mt-3 rounded-5">
+              <div class="d-flex justify-content-between fw-bold fs-5 opacity-75">
+                <div>Projects</div>
+                <div>December,12</div>
+
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
