tiles started in bootstrap-7

--- a/task-7-bootstrap/index.html
+++ b/task-7-bootstrap/index.html
@@ -215,7 +215,7 @@
               </nav>
             </div>
             
-            <!-- tiles area -->
+            <!--main tiles area -->
 
             <div class="bg-white h-100 p-4 mt-3 rounded-5">
               <div class="d-flex justify-content-between fw-bold fs-5 opacity-75">
@@ -223,6 +223,28 @@
                 <div>December,12</div>
 
               </div>
+
+              <div class="d-flex mt-2 gap-3 opacity-75">
+                <div>
+                  <div class="fw-bold fs-5">45</div>
+                  <div >In Progress</div>
+                </div>
+
+                <div>
+                  <div class="fw-bold fs-5">24</div>
+                  <div>Upcoming</div>
+                </div>
+
+                <div>
+                  <div class="fw-bold fs-5">62</div>
+                  <div>Total Projects</div>
+                </div>
+              </div>
+
+
+              <!-- small tiles -->
+              
+
             </div>
 
           </div>
