--- a/task-7-bootstrap/index.html
+++ b/task-7-bootstrap/index.html
@@ -263,13 +263,13 @@
                 </div>
               </div>
 
-              <!-- small tiles -->
+ <!-- small tiles -->
 
-              <div class="container mt-3">
+              <div class="container mt-4">
                 <div class="row gap-3">
                   <div
                     class="col bg-yellow p-3 rounded-4"
-                    style="background-color: burlywood"
+                    style="background-color: rgb(241, 227, 208)"
                   >
                     <div class="d-flex justify-content-between">
                       <div style="font-size: 13px; opacity: 80%">
@@ -313,7 +313,7 @@
 
                   <div
                     class="col bg-yellow p-3 rounded-4"
-                    style="background-color: burlywood"
+                    style="background-color: rgb(212, 234, 244)"
                   >
                     <div class="d-flex justify-content-between">
                       <div style="font-size: 13px; opacity: 80%">
@@ -335,7 +335,7 @@
                     </div>
 
                     <div class="text-center mt-3 fw-bold">
-                      <div style="opacity: 90%">Web Designing</div>
+                      <div style="opacity: 90%">Testing</div>
                       <div style="font-size: 14px; opacity: 70%">
                         Prototyping
                       </div>
@@ -357,7 +357,7 @@
 
                   <div
                     class="col bg-yellow p-3 rounded-4"
-                    style="background-color: burlywood"
+                    style="background-color: rgb(229, 232, 236)"
                   >
                     <div class="d-flex justify-content-between">
                       <div style="font-size: 13px; opacity: 80%">
@@ -379,7 +379,7 @@
                     </div>
 
                     <div class="text-center mt-3 fw-bold">
-                      <div style="opacity: 90%">Web Designing</div>
+                      <div style="opacity: 90%">Svg Animation </div>
                       <div style="font-size: 14px; opacity: 70%">
                         Prototyping
                       </div>
@@ -400,10 +400,14 @@
                   </div>
                 </div>
 
+
+<!-- second tiles row -->
+
+
                 <div class="mt-3 row gap-3">
                   <div
                     class="col bg-yellow p-3 rounded-4"
-                    style="background-color: burlywood"
+                    style="background-color: rgb(193, 227, 220)"
                   >
                     <div class="d-flex justify-content-between">
                       <div style="font-size: 13px; opacity: 80%">
@@ -425,7 +429,7 @@
                     </div>
 
                     <div class="text-center mt-3 fw-bold">
-                      <div style="opacity: 90%">Web Designing</div>
+                      <div style="opacity: 90%">UI Development</div>
                       <div style="font-size: 14px; opacity: 70%">
                         Prototyping
                       </div>
@@ -447,7 +451,7 @@
 
                   <div
                     class="col bg-yellow p-3 rounded-4"
-                    style="background-color: burlywood"
+                    style="background-color: rgb(241, 231, 217)"
                   >
                     <div class="d-flex justify-content-between">
                       <div style="font-size: 13px; opacity: 80%">
@@ -469,7 +473,7 @@
                     </div>
 
                     <div class="text-center mt-3 fw-bold">
-                      <div style="opacity: 90%">Web Designing</div>
+                      <div style="opacity: 90%">Data Analysis</div>
                       <div style="font-size: 14px; opacity: 70%">
                         Prototyping
                       </div>
@@ -491,7 +495,7 @@
 
                   <div
                     class="col bg-yellow p-3 rounded-4"
-                    style="background-color: burlywood"
+                    style="background-color: rgba(175, 222, 251, 0.988)"
                   >
                     <div class="d-flex justify-content-between">
                       <div style="font-size: 13px; opacity: 80%">
