--- a/task-7-bootstrap/index.html
+++ b/task-7-bootstrap/index.html
@@ -181,13 +181,14 @@
                       </li>
                     </ul>
 
-                    <div class="gap-4">
+                    <div class="gap-4 ">
+              
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="19"
                         height="19"
                         fill="currentColor"
-                        class="bi bi-moon"
+                        class="bi bi-moon "
                         viewBox="0 0 16 16"
                       >
                         <path
@@ -200,8 +201,9 @@
                         width="23"
                         height="23"
                         fill="currentColor"
-                        class="bi bi-plus-circle-fill"
+                        class="bi bi-plus-circle-fill "
                         viewBox="0 0 16 16"
+                        style="margin-left: 4px;"
                       >
                         <path
                           d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z"
@@ -215,6 +217,7 @@
                         fill="currentColor"
                         class="bi bi-bell"
                         viewBox="0 0 16 16"
+                        style="margin-left: 4px;"
                       >
                         <path
                           d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"
