--- a/task-10-javascript-async/index.html
+++ b/task-10-javascript-async/index.html
@@ -12,9 +12,18 @@
     />
   </head>
   <body>
-    
+
     <!-- container -->
-    <div class="container"></div>
+    <div class="container" style="width: 70%;">
+        <div class="d-flex justify-content-between">
+            <div>UserName</div>
+            <div>Action</div>
+        </div>
+    </div>
+
+
+
+
 
     <!-- Modal -->
     <div class="modal">
@@ -35,6 +44,8 @@
             Gender: <span id="modal-gender"></span>
             <br>
             Status: <span id="modal-status"></span>
+
+            <div class="mt-3"></div>
             <button
               type="button"
               class="btn btn-secondary"
