--- a/task-10-javascript-async/index.html
+++ b/task-10-javascript-async/index.html
@@ -14,13 +14,26 @@
   <body>
 
     <!-- container -->
-    <div class="container" style="width: 70%;">
-        <div class="d-flex justify-content-between">
+    <div class="container" style="width: 60%;">
+        <div class="d-flex justify-content-between mb-3">
             <div>UserName</div>
             <div>Action</div>
         </div>
     </div>
 
+
+    <div class="container mt-3 d-flex justify-content-center" style="width: 60%;">
+    
+      <nav aria-label="Page navigation example ">
+        <ul class="pagination bottom-0">
+          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+    </div>
 <!-- done -->
 
 
@@ -56,6 +69,9 @@
         </div>
       </div>
     </div>
+
+
+    <!-- page initiation -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
