--- a/task-3-basic-html/html-resume.html
+++ b/task-3-basic-html/html-resume.html
@@ -64,14 +64,14 @@
 
                 <div class="second-container-left">Profile:</div>
 
-                <div style="margin-top: 1%;margin-right: 2%;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde sit corrupti commodi similique omnis quae, enim laudantium tempora animi hic reiciendis molestiae cumque.
+                <div class="second-container-first-div">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde sit corrupti commodi similique omnis quae, enim laudantium tempora animi hic reiciendis molestiae cumque.
                 </div>
             </div>
 
-            <div style="display: flex;margin-top: 4%; ">
+            <div style="display: flex;margin-top: 4%;margin-left: 2%; ">
                 <div class="second-container-left">Skills:</div>
 
-                <div style="display: flex;width: 100%;gap: 22%;">
+                <div style="display: flex;width: 60%;gap: 22%;">
                     <div >
                         <ul style="list-style-type:square">
                             <li>XHTML</li>
