chaged inline css of html-form

--- a/task-3-basic-html/html-resume.html
+++ b/task-3-basic-html/html-resume.html
@@ -60,7 +60,7 @@
 
         <div class="second-main-component-class">
 
-            <div style="display: flex;">
+            <div class="second-container-first-first">
 
                 <div class="second-container-left">Profile:</div>
 
@@ -68,10 +68,10 @@
                 </div>
             </div>
 
-            <div style="display: flex;margin-top: 4%;margin-left: 2%; ">
+            <div class="second-container-second-div">
                 <div class="second-container-left">Skills:</div>
 
-                <div style="display: flex;width: 60%;gap: 22%;">
+                <div class="second-container-second-div-second-child">
                     <div >
                         <ul style="list-style-type:square">
                             <li>XHTML</li>
@@ -97,16 +97,16 @@
 
             </div>
 
-            <div style="display: flex; margin-top: 2%;">
+            <div class="second-container-third-div">
                 <div class="second-container-left">Experience:</div>
-                <div style="margin-top: 1%; width: 110%;">
+                <div class="second-container-third-div-right-div">
                     <h4>Web Developer / Designer</h4>
                     <p style="color: orangered;">Company Name 1</p>
                     <p>
                         Feburvary 2009 -present
                     </p>
 
-                    <div style="margin-top: 2%;margin-right: 5%;">
+                    <div class="second-container-third-div-right-second-div">
                         
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur veritatis hic, unde repellendus illo perspiciatis non in laboriosam commodi suscipit, sit vel quibusdam ipsum pariatur beatae, error ad corporis velit voluptatem. Voluptatibus iure perferendis voluptatem.
                     </div>
@@ -118,7 +118,7 @@
         <!-- table component -->
 
         <div>
-            <div style="font-weight: bold;margin-top: 3%;">Education</div>
+            <div class="table-content-class">Education</div>
             <div class="grid-template">
                 <div class="grid-item">Institute</div>
                 <div class="grid-item">Subjects</div>
