task-5-css first container done

--- a/task-5-css/myfile.html
+++ b/task-5-css/myfile.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div style="display: flex">
+    <div class="parent-container">
       <div class="first-container">
         <!-- Career profile
          -->
@@ -37,15 +37,15 @@
           <h2>EXPERIENCES</h2>
         </div>
 
-        <div style="display: flex; justify-content: space-between">
+        <div class="ui-container-parnent-container">
           <div class="first-left-below" style="opacity: 70%">UI Developer</div>
 
           <div class="first-left-below" style="opacity: 40%">2016-2018</div>
         </div>
 
-        <div style="font-size: 20px; opacity: 30%; margin-top: 4px">Amazon</div>
+        <div class="amazon-container">Amazon</div>
 
-        <div class="first-text-below" style="margin-right: 5%">
+        <div class="first-text-below amazon-container-experience">
           Describe your role here Lorem ipsum dolor sit amet consectetur
           adipisicing elit. Inventore illum aspernatur aut autem accusamus, ab
           amet tenetur iure itaque ex, architecto ipsam expedita?Lorem,
@@ -66,7 +66,7 @@
           <h2>PROJECTS</h2>
         </div>
 
-        <div class="first-text-below" style="margin-right: 9%">
+        <div class="first-text-below amazon-container-experience">
           You can list your side project. Lorem ipsum dolor sit, amet
           consectetur adipisicing elit. Molestiae exercitationem culpa tempora
           odit suscipit quo eos Lorem ipsum dolor sit amet consectetur
@@ -75,14 +75,14 @@
           numquam, fugiat, porro, omnis consectetur blanditiis? Explicabo?
         </div>
 
-        <div class="first-text-below" style="margin-right: 9%">
+        <div class="first-text-below amazon-container-experience"  >
           Resume- A responsive Lorem ipsum dolor, sit amet consectetur
           adipisicing elit. Delectus, asperiores earum magni quam dolorem
           consequuntur alias aut nihil laboriosam veniam similique unde
           deserunt.
         </div>
 
-        <div class="first-left-heading" style="margin-top: 60px">
+        <div class="first-left-heading skills-proficiency" >
           <img
             src="https://www.logoground.com/uploads12/dv12y20231832942023-05-144706904Rocket-City.jpg"
             alt="user_image"
@@ -93,30 +93,28 @@
           <h2>SKILLS AND PROFICIENCY</h2>
         </div>
 
-        <div style="opacity: 70%">
-          <div style="display: flex">
-            <div style="width: 30%; font-weight: bold; font-size: 20px">
+        <div class="horizontal-bar-parent">
+          <div class="horizontal-bar-first-div">
+            <div class="horizontal-bar-left-heading">
               HTML5 & CSS
             </div>
-            <div style="width: 100%; background-color: gainsboro">
-              <div
-                style="width: 93%; height: 100%; background-color: blueviolet"
-              ></div>
+            <div class="horizontal-bar-right-parent">
+              <div class="horizontal-bar-right-inner"></div>
             </div>
           </div>
 
-          <div style="display: flex; margin-top: 4%">
-            <div style="width: 30%; font-weight: bold; font-size: 20px">
+          <div class="horizontal-bar-second-div">
+            <div class="horizontal-bar-left-heading">
               C++
             </div>
-            <div style="width: 100%; background-color: gainsboro">
-              <div
-                style="width: 56%; height: 100%; background-color: blueviolet"
-              ></div>
+            <div class="horizontal-bar-right-parent">
+              <div class="horizontal-bar-second-div-inner"></div>
             </div>
           </div>
         </div>
       </div>
+
+      
 
       <div class="second-container" style="min-height:max-content;position: relative;;right: 0;">
         <div>
