inner style changed to stylesheet of task-5-css

--- a/task-5-css/myfile.html
+++ b/task-5-css/myfile.html
@@ -9,8 +9,7 @@
   <body>
     <div class="parent-container">
       <div class="first-container">
-        <!-- Career profile
-         -->
+        <!-- Career profile-->
         <div class="first-left-heading">
           <img
             src="https://toppng.com//public/uploads/preview/circled-user-icon-user-pro-icon-11553397069rpnu1bqqup.png"
@@ -114,9 +113,9 @@
         </div>
       </div>
 
-      
 
-      <div class="second-container" style="min-height:max-content;position: relative;;right: 0;">
+
+      <div class="second-container" >
         <div>
           <div
             style="
@@ -130,13 +129,13 @@
               alt="john-doe-image"
               width="30%"
             />
-            <div style="font-size: 38px; font-weight: bold">John Doe</div>
-            <div style="font-size: 24px; opacity: 80%">
+            <div class="jhon-doe-heading">John Doe</div>
+            <div class="full-stack-developer-heading">
               Full Stack Developer
             </div>
           </div>
 
-          <div style="margin-left: 15%;margin-top: 4%; font-size: larger">
+          <div class="contact-information-container">
             <div class="second-right-heading">
               <img src="./assets/mail.png" width="10%" />
 
@@ -194,28 +193,28 @@
             </div>
           </div>
 
-          <div style="margin-left: 15%; margin-top: 35px">
-            <div style="font-size: 25px; font-weight: bold">Education</div>
-            <div class="font-25" style="margin-top: 9px">
+          <div class="education-container">
+            <div class="font-25 font-weight-bold">Education</div>
+            <div class="font-25">
               MSc in Computer Science
             </div>
 
-            <div class="font-25" style="opacity: 60%">University</div>
-            <div class="font-25" style="opacity: 60%">2016-2018</div>
+            <div class="font-25 opacity-60-class" >University</div>
+            <div class="font-25 opacity-60-class" >2016-2018</div>
 
-            <div class="font-25" style="margin-top: 20px">B.Tech</div>
-            <div class="font-25" style="opacity: 60%">Top University</div>
-            <div class="font-25" style="opacity: 60%">2011-2015</div>
+            <div class="font-25 margin-top-20px" >B.Tech</div>
+            <div class="font-25 opacity-60-class" >Top University</div>
+            <div class="font-25 opacity-60-class">2011-2015</div>
 
-            <div style="margin-top: 45px; font-size: 22px; font-weight: bold">
+            <div class="language-class">
               LANGUAGE
             </div>
-            <div style="margin-top: 10px; font-size: 20px">
-              <p style="opacity: 60%">Hindi(Native)</p>
+            <div class="language-class-font-inner">
+              <p class="opacity-60-class">Hindi(Native)</p>
             </div>
 
-            <div style="margin-top: 10px; font-size: 20px">
-              <p style="opacity: 60%">English(Professional)</p>
+            <div class="language-class-font-inner">
+              <p class="opacity-60-class">English(Professional)</p>
             </div>
           </div>
         </div>
