task-9-js logic and styling done

--- a/task-9-javascript/index.html
+++ b/task-9-javascript/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>spilt-number functionality</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="behind-container">
@@ -24,19 +24,19 @@
         </div>
 
 
-        <div style="margin-top: 4px; background-color: white; padding: 2px;">
+        <div class="split-button">
             <button onclick="initiateFun()">Split</button>
         </div>
 
 
-        <div id="color-shades" class="container-small" style="margin-top: 40px;display: flex;column-gap: 4px;">
+        <div id="color-shades" class="container-small color-shades-div">
             <!-- color shades -->
 
         </div>
     </div>
     
 
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
     
 </body>
 </html>
